hw-cluster-network/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
  labels:
    app: frontend
    environment: dev
spec:
  selector:
    app: nginx-frontend
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
